<resources>

    <!-- Common strings -->
    <string name="app_name">Your App Name</string> <!-- Fill with your actual app name -->
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="error_message">Error: %1$s</string>
    <string name="invalid_input_message">Please check your input fields.</string>

    <!-- Shared Preferences Keys -->
    <string name="preference_file_key">com.example.eassyappointmentfe.PREFERENCE_FILE_KEY</string>
    <string name="saved_token">com.example.eassyappointmentfe.SAVED_TOKEN</string>

    <!-- SignUpActivity strings -->
    <string name="let_s_start_here">Let\'s Start Here</string>
    <string name="already_have_an_account_log_in">Already Have An Account? Log In</string>
    <string name="signup_success">Signup successful</string>
    <string name="signup_fail">Signup failed: %1$s</string>

    <!-- LoginActivity strings -->
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="login_prompt">Already have an account? Log In</string>
    <string name="login_keyword">Log In</string>
    <string name="login_success">Login successful</string>

    <!-- Prompts to switch between SignUpActivity and LoginActivity -->
    <string name="sign_up_prompt">Don\'t Have An Account? Sign Up</string>
    <string name="sign_up_keyword">Sign Up</string>


    <!-- CreateBusinessActivity strings -->
    <string name="business_name">Business Name</string>
    <string name="upload_logo">Upload Logo</string>
    <string name="create_business">Create Business</string>
    <string name="create_your_business">Create Your Business</string>
    <string name="business_logo">business logo</string>
    <string name="create_new_branch">Create New Branch</string>
    <string name="upload_branch_logo">Upload Branch Logo</string>
    <string name="upload_employee_image">Upload Employee Image</string>
    <string name="create_new_employee">Add New Employee</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>
